--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,11 @@ go:
   - 1.14.x
 
 script:
-  - go test -cover -v -race -coverprofile=coverage.txt -covermode=atomic ./...
+  - go test -v -coverprofile=coverage.out -covermode=count ./...
+
+before_script:
+  - go env
+
+after_success:
+  - go get -v github.com/mattn/goveralls
+  - $GOPATH/bin/goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALLS_TOKEN
